@@ -79,13 +79,16 @@ test -f $SPOOL/etc/setup.cache || {
 . $SPOOL/etc/setup.modem	# modem-specific stuff
 
 SH=$SCRIPT_SH			# shell for use below
-OUT=/tmp/probemodem$$		# temp file in which modem output is recorded
+if ! TMPDIR=`mktemp -d /tmp/.probemodem.XXXXXX`; then
+    TMPDIR=/tmp/.probemodem.sh$$
+    mkdir $TMPDIR || exit 1
+fi
+OUT=$TMPDIR/probemodem$$	# temp file in which modem output is recorded
 SVR4UULCKN=$LIBEXEC/lockname	# SVR4 UUCP lock name construction program
 ONDELAY=$LIBEXEC/ondelay	# prgm to open devices blocking on carrier
 CAT="$CAT -u"			# something to do unbuffered reads and writes
 
 # security
-rm -rf $OUT
 ${NOCLOBBER_ON}
 > $OUT || exit 1
 ${NOCLOBBER_OFF}
