@@ -69,9 +69,10 @@ TEE=tee
 UPDATE="date +'%D %H:%M' >$LAST"
 
 # security
-TMPDIR=/tmp/.faxcron.sh$$
-rm -rf $TMPDIR
-mkdir $TMPDIR || exit 1
+if ! TMPDIR=`mktemp -d /tmp/.faxcron.XXXXXX`; then
+    TMPDIR=/tmp/.faxcron.sh$$
+    mkdir $TMPDIR || exit 1
+fi
 
 JUNK=$TMPDIR/faxjunk$$         # temp file used multiple times
 AWKTMP=$TMPDIR/faxawk$$                # temp file for awk program
